--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2>Hi my name is Alex </h2>
 <h3>This is my first website</h3>
 
-<a href="https://molex.bversion.com">Go to molex.bversion.com</a>
+<a href="https://google.com">Go to another website</a>
 <p>Welcome to my first website where I will list the top 3 of my favourite foods! 
     you can also enter what your favourte food down here in the text box below.
 </p>
@@ -24,7 +24,7 @@
     <input type = "submit" value = "submit">
     <input type = "reset" value = "reset">
 </form>
-<ol style = "">
+<ol style>
     <li>Pizza</li>
     <img src="C:\Users\chan.t1\Downloads\pizza.png">
     <li>burger</li>
@@ -35,7 +35,7 @@
     <h5>What is your favourite drink out of these three drinks below?</h5><br>
     <input type="text"><br>
     <input type="submit" value="submit">
-<ul style = "">
+<ul style>
     <li>coke</li>
     <li>water</li>
     <li>juice</li>
